# ROS_CLASS_code0

./: .gitignore  README.md
dhy_class_3/: LAB2_LOG_DEBUG_GUIDE.md  LAUNCH_GUIDE.md
dhy_class_3/.claude/: settings.local.json
dhy_class_3/devel/: .catkin
dhy_class_3/devel/include/dhy_class_pkg/: TutorialsConfig.h
dhy_class_3/devel/lib/dhy_class_pkg/: dhy_ros_log  ros_debug_sim  ros_dynamic_speed_node  ros_param
dhy_class_3/devel/lib/pkgconfig/: dhy_class_pkg.pc  dhy_robot_description.pc
dhy_class_3/devel/share/dhy_class_pkg/cmake/: dhy_class_pkgConfig.cmake
dhy_class_3/devel/share/dhy_class_pkg/docs/: TutorialsConfig-usage.dox  TutorialsConfig.dox  TutorialsConfig.wikidoc
dhy_class_3/devel/share/dhy_robot_description/cmake/: dhy_robot_descriptionConfig.cmake
dhy_class_3/src/catkin_create_pkg/dhy_robot_description/: CMakeLists.txt
dhy_class_3/src/catkin_create_pkg/dhy_robot_description/launch/: display.launch  gazebo.launch
dhy_class_3/src/catkin_create_pkg/dhy_robot_description/urdf/: simple_robot.urdf  two_wheel_robot.urdf  (+1 more)
dhy_class_3/src/dhy_arm_description/: CMakeLists.txt  package.xml
dhy_class_3/src/dhy_arm_description/config/: arm_controllers.yaml
dhy_class_3/src/dhy_arm_description/launch/: arm_gazebo.launch
dhy_class_3/src/dhy_arm_description/scripts/: arm_keyboard_ctrl.py
dhy_class_3/src/dhy_arm_description/urdf/: arm.urdf
dhy_class_3/src/dhy_class_pkg/: CMakeLists.txt  package.xml
dhy_class_3/src/dhy_class_pkg/cfg/: Tutorials.cfg
dhy_class_3/src/dhy_class_pkg/scripts/: follow_line.py
dhy_class_3/src/dhy_class_pkg/src/: dhy_ros_log.cpp  ros_debug_sim.cpp  ros_dynamic_speed.cpp
dhy_class_3/src/dhy_gesture_pkg/: CMakeLists.txt  package.xml
dhy_class_3/src/dhy_gesture_pkg/scripts/: apriltag_follow.py  gesture_movement.py  tag_follow_grab.py  upros_gesture.py
dhy_class_3/src/dhy_gesture_pkg/src/: tag_grab.cpp
(+1 files in other folders)
